# XFDTD_CORE

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  check_coeff.py
cmake/: cuda.cmake  xfdtd-config.cmake.in  xfdtd_core-config.cmake.in
examples/: CMakeLists.txt  RAEDME.md  cylinder_scatter_2d.cpp  dielectric_cube_scatter.cpp  dielectric_resonator_antenna.cpp  dielectric_sphere_scatter.cpp  half_wave_dipole.cpp  inverted_f_antenna.cpp  lorentz_sphere_scatter.cpp  microstrip_branch_line_coupler.cpp  microstrip_line.cpp  microstrip_low_pass.cpp  mini_test.cpp  quarter_wave_transformer.cpp  rlc_circuit.cpp  run_all_exmaples.sh  simple_capacitor.cpp  simple_circuit.cpp
examples/dispersive_sphere_scatter/: debye_sphere_scatter.cpp  dispersive_sphere_scatter.h  drude_sphere_scatter.cpp  lorentz_sphere_scatter.cpp
examples/plot_script/: ag_nano_sphere_scatter.py  au_nano_sphere_scatter.py  cylinder_scatter_2d.py  dielectric_resonator_antenna.py  dielectric_sphere_scatter.py  dispersive_sphere_scatter.py  half_wave_dipole.py  helper.py  inverted_f_antenna.py  lorentz_sphere_scatter.py  microstrip_branch_line_coupler.py  microstrip_line.py  microstrip_low_pass.py  quarter_wave_transformer.py  simple_capacitor.py  simple_circuit.py  slab_refection_transmission.py
examples/src/: CMakeLists.txt  ag_nanosphere_scatter.cpp  au_nanosphere_scatter.cpp  benchmark.cpp  cylinder_scatter_2d.cpp  dielectric_resonator_antenna.cpp  dielectric_sphere_scatter.cpp  microstrip_branch_line_coupler.cpp  quarter_wave_transformer.cpp  slab_refection_transmission.cpp
examples/src/dispersive_sphere_scatter/: debye_sphere_scatter.cpp  dispersive_sphere_scatter.h  drude_sphere_scatter.cpp
src/: CMakeLists.txt  m.cpp
src/app/: CMakeLists.txt
src/app/src/: CMakeLists.txt  read_basic.cpp
src/app/src/include/toml++/: toml.hpp
src/boundary/: CMakeLists.txt  boundary.cpp  pml.cpp  pml_corrector.cpp
src/calculation_param/: CMakeLists.txt  calculation_param.cpp  fdtd_update_coefficient.cpp  material_param.cpp  time_param.cpp
src/coordinate_system/: CMakeLists.txt  asix.cpp  coordinate_system.cpp  vector.cpp
src/corrector/: CMakeLists.txt
src/cuda/: CMakeLists.txt
src/cuda/calculation_param/: calculation_param.cu  fdtd_coefficient.cu
src/cuda/grid_space/: grid_space.cu
src/domain/: CMakeLists.txt  domain.cpp
src/electromagnetic_field/: CMakeLists.txt  electromagnetic_field.cpp
src/grid_space/: CMakeLists.txt  grid_space.cpp  grid_space_1d.cpp  grid_space_2d.cpp  grid_space_3d.cpp  grid_space_generator.cpp
src/include/boundary/: pml_corrector.h  pml_scheme.h
src/include/common/: fdtd.h
src/include/corrector/: corrector.h
src/include/divider/: divider.h
src/include/domain/: domain.h
src/include/grid_space/: grid_space_1d.h  grid_space_2d.h  grid_space_3d.h  grid_space_data.h  grid_space_generator.h
src/include/material/: dispersive_material_equation.h  dispersive_solver_common.h
src/include/nffft/: interpolate_scheme.h  nffft_fd_data.h  nffft_td_data.h
src/include/object/: lumped_element_corrector.h
src/include/parallel/: mpi_support_imp.h  mpi_type_define.h
src/include/updator/: basic_updator.h  dispersive_material_updator.h  update_scheme.h  updator.h
src/include/updator/ade_updator/: ade_updator.h  debye_ade_updator.h  drude_ade_updator.h  m_lor_ade_updator.h  template_ade_update_scheme.h
src/include/updator/dispersive_material_update_method/: debye_ade_method.h  debye_ade_updator.h  dispersive_material_update_method.h  drude_ade_method.h  m_lorentz_ade_method.h
src/include/util/: decompose_task.h  float_compare.h  random.h
src/include/waveform_source/: tfsf_corrector.h  waveform_source_corrector.h
src/material/: CMakeLists.txt  debye_medium.cpp  dipersive_material.cpp  dispersive_material_equation.cpp  drude_medium.cpp  lorentz_medium.cpp  material.cpp
src/material/ade_method/: ade_method.cpp  debye_ade_method.cpp  drude_ade_method.cpp  m_lor_ade_method.cpp
src/monitor/: current_monitor.cpp  field_monitor.cpp  field_time_monitor.cpp  monitor.cpp  movie_monitor.cpp  time_monitor.cpp  voltage_monitor.cpp
src/network/: CMakeLists.txt  network.cpp  port.cpp
src/nffft/: CMakeLists.txt  nfffft_time_domain.cpp  nffft.cpp  nffft_fd_data.cpp  nffft_fd_data_process.cpp  nffft_fd_data_update.cpp  nffft_frequency_domain.cpp
src/object/: CMakeLists.txt  flow_field.cpp  object.cpp  thin_wire.cpp
src/object/lumped_element/: CMakeLists.txt  capacitor.cpp  current_source.cpp  inductor.cpp  lumped_element.cpp  lumped_element_corrrector.cpp  pec_plane.cpp  resistor.cpp  voltage_source.cpp
src/parallel/: CMakeLists.txt  mpi_config.cpp  mpi_support.cpp  mpi_support_block.cpp  mpi_support_helper.cpp  mpi_support_slice.cpp  parallelized_config.cpp
src/shape/: CMakeLists.txt  cube.cpp  cylinder.cpp  shape.cpp  sphere.cpp
src/simulation/: CMakeLists.txt  simulation.cpp
src/updator/: CMakeLists.txt  basic_updator.cpp  basic_updator_3d.cpp  basic_updator_te.cpp  debye_ade_updator.cpp  dispersive_material_updator.cpp  drude_ade_updator.cpp  lorentz_ade_updator.cpp  m_lor_ade_updator.cpp  updator.cpp
src/updator/ade_updator/: ade_updator.cpp  debye_ade_updator.cpp  drude_ade_updator.cpp
src/updator/dispersive_material_update_method/: debye_ade_method.cpp  drude_ade_method.cpp  m_lorentz_ade_method.cpp
src/waveform/: CMakeLists.txt  waveform.cpp
src/waveform_source/: CMakeLists.txt  hard_point.cpp  tfsf.cpp  tfsf_1d.cpp  tfsf_2d.cpp  tfsf_3d.cpp  tfsf_corrector.cpp  waveform_source.cpp
test/: CMakeLists.txt
test/src/examples/: CMakeLists.txt  benchmark.cpp  cylinder_scatter_2d.cpp  dielectric_cube_scatter.cpp  dielectric_resonator_antenna.cpp  dielectric_sphere_scatter.cpp  half_wave_dipole.cpp  inverted_f_antenna.cpp  microstrip_branch_line_coupler.cpp  microstrip_line.cpp  microstrip_low_pass.cpp  quarter_wave_transformer.cpp  rlc_circuit.cpp  simple_capacitor.cpp  simple_circuit.cpp
test/src/examples/dispersive_sphere_scatter/: debye_sphere_scatter.cpp  dispersive_sphere_scatter.h  drude_sphere_scatter.cpp  lorentz_sphere_scatter.cpp
(+105 files in other folders)
